# OmSU_3-4-sem

./: CMakeLists.txt  README.md
laba01/: README.md  bracket_sequence.cpp  delete_in_place.cpp
laba02/: README.md  merge_sorting.cpp  sorting_by_insertion.cpp  sorting_structures.cpp
laba03/: README.md  digital_sorting.cpp  sorting_by_counting.cpp
laba04/: README.md  heap.cpp  stack_of_minimums.cpp
laba05/: README.md  hashmap.cpp
laba06/: README.md  binary_search_approximate.cpp  diplomas.cpp  solution_of_the_equation.cpp
laba07/: NOP.cpp  NVP.cpp  README.md  bagel.cpp
laba08/: README.md  prefix_amounts.cpp  tree_of_segments_for_minima.cpp
laba09/: AVL_tree.cpp  README.md  binary_search_tree.cpp
laba10/: README.md  connectivity_component.cpp  topological_sorting.cpp
laba11/: README.md  edges.csv  nodes.csv  omsk_edges.csv  omsk_nodes.csv  pizza_delivery.cpp
laba12/: README.md  normal_calculator.cpp  polish_calculator.cpp  reverse_polish_entry.cpp
